<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jacob.finalproject.chartFragment"

    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str3"
        android:id="@+id/textView"
        android:textColor="@android:color/white"

        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str12"
        android:id="@+id/radioButton1"
        android:textColor="@android:color/white"

        />

    <RadioButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str13"
        android:id="@+id/radioButton2"
        android:textColor="@android:color/white"
        />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str4"
            android:id="@+id/goButton"
            />
    </RadioGroup>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_gravity="center_vertical" />

</LinearLayout>

</FrameLayout>
